consolidating parameter processing for Path